fixed missing background color on pages w/o upper nav

--- a/cog/static/cog/css/cogstyle.css
+++ b/cog/static/cog/css/cogstyle.css
@@ -177,7 +177,8 @@ h6 {
 * SCOPE: the page body content
 ***************/
 hr {
-	background-color: #CCC;
+	/*background-color: #CCC; light-gray*/
+        background-color:  #358C92; /* dark teal */
 	margin-bottom: 4px;
 	margin-top: 4px;
 }
@@ -380,7 +381,8 @@ BEGIN FORM ELEMENTS
 	border:       1px solid #bbb;
 	border-color: #666666;
 	margin-bottom:5px;
-	margin-right:2px;
+	margin-right: 2px;
+	margin-top:   5px;
 }
 
 
@@ -400,14 +402,14 @@ input[type=password] {
 	border: 1px solid #666666;
 	background: #FFFFFF;
 	color: #5D781D;
-        width:99% /* same width as all other types of inputs */
+        width:99%; /* same width as all other types of inputs */
 }
 
 input[type=url] {
         border: 1px solid #666666;
 	background: #FFFFFF;
 	color: #5D781D;
-        width:99% /* same width as all other types of inputs */
+        width:99%; /* same width as all other types of inputs */
 }
 
 /* allow for text inputs that span their entire container */
@@ -419,7 +421,6 @@ textarea {
         /* display scrollbars as needed */
 	overflow: auto;
 	border:   1px solid #666666;
-	margin:   1px;
 	width:    99%; /* not 100% because it provides a nice margin inside a table */
 }
 
